<resources>
    <string name="app_version">1.0.0 ver</string>
    <string name="app_name">STITCH</string>
    <string name="navi_home">홈</string>
    <string name="navi_category">카테고리</string>
    <string name="navi_mymatch">마이매치</string>
    <string name="navi_mymenu">마이메뉴</string>

    <string name="login_privacy_agree">가입을 진행할 경우, 서비스 약관 및 개인정보 처리방침에\n동의한 것으로 간주합니다.</string>
    <string name="login_guide">일상속에서 함께하는\n운동의 즐거움을 새롭게 경험해보세요.</string>
    <string name="login_kakao_text">카카오 로그인</string>
    <string name="login_google_text">구글로 시작하기</string>
    <string name="descriptor_back_button">뒤로가기 버튼</string>
    <string name="signup_frag1_top">안녕하세요!\n닉네임을 알려주세요</string>
    <string name="signup_frag2_top">나를 잘 나타내는\n프로필 사진을 등록해 주세요</string>
    <string name="signup_frag3_top">현재 살고있는\n지역을 설정해주세요</string>
    <string name="signup_frag4_top">관심있는 운동 종목을\n3개 이상 선택하세요</string>
    <string name="signup_success_top">가입이 완료되었습니다!\nSTITCH를 통해 새로운 사람들과\n매칭을 즐겨보세요</string>
    <string name="signup_button_next">다음</string>
    <string name="signup_first_introduce">안녕하세요 함께 스포츠를 즐겨보아요~\uD83D\uDE00</string>

    <string name="signup">회원가입</string>
    <string name="signup_success">회원가입 완료</string>
    <string name="address_input">주소입력</string>
    <string name="address_input_hint">동명(읍, 면)으로 검색 (ex. 서초동)</string>
    <string name="location_input_hint">동명, 장소명 검색 (ex. 서초동, 종합운동장)</string>
    <string name="address_gps">현재위치로 찾기</string>
    <string name="address_tip">검색 TIP</string>
    <string name="address_tip_1">•  도로명 + 건물기호</string>
    <string name="address_tip_1_ex">(예: 강남대로 570)</string>
    <string name="address_tip_2">•  동/읍/면/리 + 번지</string>
    <string name="address_tip_2_ex">(예: 신천동 7–30)</string>
    <string name="address_tip_3">•  건물명, 아파트명</string>
    <string name="address_tip_3_ex">(예: 광교경남아너스빌)</string>
    <string name="address_gps_result">근처 동네</string>
    <string name="address_result_null">검색 결과가 없어요.\n주소 내용을 다시 확인해주세요!</string>
    <string name="address_result_research">주소 다시 검색하기</string>
    <string name="address_result_name">\'%1$s\' 검색결과</string>
    <string name="address_result_near">\'%1$s\' 근처동네</string>
    <string name="sport_badminton">배드민턴</string>
    <string name="sport_tennis">테니스</string>
    <string name="sport_pingpong">탁구</string>
    <string name="sport_running">런닝</string>
    <string name="sport_mountain">등산</string>
    <string name="sport_basketball">농구</string>
    <string name="sport_soccer">축구</string>
    <string name="sport_health">헬스</string>
    <string name="sport_baseball">야구</string>
    <string name="sport_golf">골프</string>
    <string name="sport_etc">기타</string>
    <string name="signup_button_success">시작하기</string>
    <string name="chip_event">이벤트</string>
    <string name="chip_class">Teach</string>

    <string name="snackbar_network_error">네트워크 상태가 좋지않아요\n연결 상태를 확인하고 다시 시도해주세요</string>
    <string name="snackbar_banner_error">네트워크 상태가 좋지않아요\n일부 기능이 제한될 수 있습니다</string>

    <string name="main_null">현재 개설된 매치가 없어요\n매치를 새로 만들어 사람들과 즐겨보세요</string>
    <string name="main_contents_recommend">추천하는 Teach 매치</string>
    <string name="main_contents_newmatch">새롭게 열린 매치</string>

    <string name="home_match_participant">%1$s/%2$s명</string>


    <string name="newmatch_toptext_1">매치 개설하기</string>
    <string name="newmatch_toptext_2">운동종목 선택</string>
    <string name="newmatch_complete">완료</string>

    <string name="newmatch_type_top">원하시는 매치를 선택해주세요</string>
    <string name="newmatch_type_regular">일반 매치개설</string>
    <string name="newmatch_type_regular_description">누구나 참여할 수 있는 매치를 열어보세요</string>
    <string name="newmatch_type_teach">티치 매치개설</string>
    <string name="newmatch_type_teach_description">전문적인 수강을 위한 매치를 열어보세요</string>

    <string name="newmatch_sport_top">번개 매치를 위한\n운동종목을 선택해주세요</string>

    <string name="newmatch_detail_top">즐거운 매치를 위한\n상세 설명을 등록해볼까요?</string>
    <string name="newmatch_detail_gallery">사진 추가(선택)</string>
    <string name="newmatch_detail_name">매치 제목</string>
    <string name="newmatch_detail_name_hint">매치 제목을 설정해주세요 (30자 이내)</string>
    <string name="newmatch_detail_input_length">%1$s / %2$s</string>
    <string name="newmatch_detail_name_length_error">제한된 글자 수를 초과했습니다.</string>
    <string name="newmatch_detail_description">상세 내용</string>
    <string name="newmatch_detail_description_hint">매치 소개글을 입력해 주세요(선택)</string>
    <string name="newmatch_detail_starttime">매치 날짜/시간</string>
    <string name="newmatch_detail_starttime_hint">날짜와 시간을 설정해주세요</string>
    <string name="newmatch_detail_starttime_alert">모임 3시간 전, 자동으로 신청이 마감됩니다.</string>
    <string name="newmatch_detail_starttime_time">시간 설정</string>
    <string name="newmatch_detail_starttime_time_confirm">확인</string>
    <string name="newmatch_detail_starttime_time_cancel">취소</string>
    <string name="newmatch_detail_duration">소요 시간</string>
    <string name="newmatch_detail_duration_hint">플레이 시간 설정</string>
    <string name="newmatch_detail_duration_value">%1$s</string>
    <string name="newmatch_detail_location">매치 장소</string>
    <string name="newmatch_detail_location_hint">매치 장소를 선택하세요</string>
    <string name="newmatch_detail_Participant">참가인원</string>
    <string name="newmatch_detail_Participant_2">(본인을 포함한 총 참여 인원수)</string>
    <string name="newmatch_detail_Participant_hint">인원수 설정</string>
    <string name="newmatch_detail_Participant_value">%1$s명</string>
    <string name="newmatch_detail_fee">참가비가 있나요?</string>
    <string name="newmatch_detail_fee_hint">개인 거래로 문제가 발생하는 것을 예방하기 위해 매치 진행에 필요한 모든 금액을 참가비로 설정해 주세요.</string>
    <string name="newmatch_detail_fee_yes">있음</string>
    <string name="newmatch_detail_fee_no">없음</string>
    <string name="newmatch_detail_fee_value_won">₩ </string>
    <string name="newmatch_detail_fee_value_hint">금액을 입력해주세요</string>

    <string name="newmatch_detail_location_header">장소 설정</string>
    <string name="newmatch_detail_location_guide">지도를 움직여 위치를 설정하세요</string>


    <string name="match_detail_page_detail_info">Detail info</string>
    <string name="match_detail_page_about_host">About host</string>
    <string name="match_detail_page_detail_location_guide">매치의 자세한 위치를 알려드려요</string>
    <string name="match_detail_page_detail_introduce_host">매치 호스트를 소개합니다.</string>
    <string name="match_detail_page_detail_join">매치 참여하기</string>
    <string name="match_detail_page_detail_participant">%1$s/%2$s명</string>


    <!-- ex: 3/4명 , 참여인원/최대인원 표시할 때 사용됨 -->
    <string name="participant">%1$s/%2$s명</string>

    <string name="alert_continue">계속하기</string>
    <string name="alert_quit">그만두기</string>
    <string name="alert_newmatch_clear_title">매치 개설을 그만 두시겠어요?</string>
    <string name="alert_newmatch_clear_description">입력한 정보는 저장되지 않습니다.</string>

    <string name="menu_item_report">신고하기</string>
    <string name="menu_item_quit_match">매치 취소하기</string>
    <string name="menu_item_cancel">취소</string>
    <string name="report_reason">신고 사유를 적어주세요</string>


    <string-array name="custom_weekdays">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>

</resources>