<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_address_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_14">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_address_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:text="@string/menu_item_report"
                android:textAppearance="@style/Subhead"
                android:textColor="@color/gray_02"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_address_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/gray_14"
                android:contentDescription="@string/descriptor_back_button"
                android:scaleType="center"
                android:src="@drawable/ic_arrow_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/report_reason"
            android:textAppearance="@style/Subhead"
            android:textColor="@color/white"
            android:id="@+id/tv_report_reason"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/cl_address_top"/>

        <EditText
            android:id="@+id/et_report"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="15.5dp"
            android:backgroundTint="@color/gray_14"
            android:hint="상세히 작성 부탁드려요"
            android:textAppearance="@style/Body_1"
            android:textColor="@color/gray_02"
            android:textColorHint="@color/gray_09"
            android:minHeight="123dp"
            android:gravity="top"
            app:layout_constraintEnd_toEndOf="@id/divider_report"
            app:layout_constraintStart_toStartOf="@id/divider_report"
            app:layout_constraintTop_toBottomOf="@id/tv_report_reason" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_report"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="@color/gray_07"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_report" />

        <TextView
            android:id="@+id/tv_report_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:text="@string/newmatch_detail_input_length"
            android:textAppearance="@style/Caption"
            android:textColor="@color/gray_09"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/divider_report"
            app:layout_constraintTop_toBottomOf="@id/divider_report" />

        <TextView
            android:id="@+id/tv_report_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/newmatch_detail_name_length_error"
            android:textAppearance="@style/Caption"
            android:textColor="@color/error"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/divider_report"
            app:layout_constraintTop_toBottomOf="@id/divider_report"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_report_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/button_round"
            android:text="게시하기"
            android:textAppearance="@style/Body_1"
            android:textColor="@color/gray_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>