<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_14">

        <TextView
            android:id="@+id/tv_newmatch_type_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/newmatch_type_top"
            android:textAppearance="@style/Headline"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_newmatch_type_regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            app:cardBackgroundColor="@color/black_transparent_01"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_newmatch_type_top"
            app:strokeColor="@color/gray_12"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp">

                <ImageView
                    android:id="@+id/iv_match_regular"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_bolt"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_newmatch_type_regular_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/newmatch_type_regular"
                    android:textAppearance="@style/Subhead"
                    android:textColor="@color/gray_09"
                    app:layout_constraintStart_toEndOf="@id/iv_match_regular"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_newmatch_type_regular_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/newmatch_type_regular_description"
                    android:textAppearance="@style/Caption"
                    android:textColor="@color/gray_09"
                    app:layout_constraintStart_toStartOf="@id/tv_newmatch_type_regular_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_newmatch_type_regular_title" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_newmatch_type_teach"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            app:cardBackgroundColor="@color/black_transparent_01"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_newmatch_type_regular"
            app:strokeColor="@color/gray_12"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp">

                <ImageView
                    android:id="@+id/iv_match_teach"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_people"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_newmatch_type_teach_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/newmatch_type_teach"
                    android:textAppearance="@style/Subhead"
                    android:textColor="@color/gray_09"
                    app:layout_constraintStart_toEndOf="@id/iv_match_teach"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_newmatch_type_teach_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/newmatch_type_regular_description"
                    android:textAppearance="@style/Caption"
                    android:textColor="@color/gray_09"
                    app:layout_constraintStart_toStartOf="@id/tv_newmatch_type_teach_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_newmatch_type_teach_title" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="fitEnd"
            android:src="@drawable/new_match_shining_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_newmatch_type_next"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_round_disabled"
            android:elevation="10dp"
            android:enabled="false"
            android:text="@string/signup_button_next"
            android:textAppearance="@style/Body_1"
            android:textColor="@color/gray_07"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
